--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td><img src="Images\PictureOfMe.jpg" alt="Brendan McGowen"></td>
+      <td><img src="Images\XGELogo.jpg" alt="XGELOGO"></td>
       <td>
         <h1>Brendan McGowen</h1>
         <p><em>Retail Sales at <strong>D&H Distribution</strong>. <br>Founder of <strong>XGE Solutions</strong>.</em></p>
