--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -9,7 +8,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td><img src="Images\XGELogo.jpg" alt="XGELOGO"></td>
+      <td><img src="Images\XGELogo.png" alt="XGELOGO"></td>
       <td>
         <h1>Brendan McGowen</h1>
         <p><em>Retail Sales at <strong>D&H Distribution</strong>. <br>Founder of <strong>XGE Solutions</strong>.</em></p>
